--- a/app/assets/stylesheets/custom.css.less
+++ b/app/assets/stylesheets/custom.css.less
@@ -5,7 +5,7 @@
   .slick-slide {
     height: 100%;
     width: 100%;
-    background: url('main-carousel-1.jpg') no-repeat center center;
+    background: image-url('main-carousel-1.jpg') no-repeat center center;
     background-size: cover !important;
   }
 
