perfected home page slider

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -13,6 +13,7 @@
 
 // Font Awesome
 @import "fontawesome/font-awesome";
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,600);
 
 // Glyphicons
 //@import "twitter/bootstrap/glyphicons.less";
@@ -27,3 +28,5 @@
 //
 // Example:
 // @link-color: #ff0000;
+
+@font-family-sans-serif: 'Open Sans';
