--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,11 @@
 <div class="welcome-carousel">
-  <div class="welcome-slide"></div>
-  <div class="welcome-slide"></div>
-  <div class="welcome-slide"></div>
+  <div class="welcome-carousel-slide-0">
+    <h1>Make income whenever, wherever</h1>
+  </div>
+  <div class="welcome-carousel-slide-1">
+    <h1>Master your skills by teaching others</h1>
+  </div>
+  <div class="welcome-carousel-slide-2">
+    <h1>Learn from skilled verified teachers</h1>
+  </div>
 </div>
