--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">Goal</a>
+    <%= link_to 'Goal', root_path, class: 'navbar-brand' %>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <% if user_signed_in? %>
           <%= link_to('Logout', destroy_user_session_path, method: :delete, class: 'btn btn-default navbar-btn navbar-right') %>
