added team section

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -13,7 +13,7 @@
 
 // Font Awesome
 @import "fontawesome/font-awesome";
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,600);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700,300,900);
 
 // Glyphicons
 //@import "twitter/bootstrap/glyphicons.less";
@@ -29,4 +29,4 @@
 // Example:
 // @link-color: #ff0000;
 
-@font-family-sans-serif: 'Open Sans';
+@font-family-sans-serif: 'Lato';
