--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,53 @@
 <div class="welcome-carousel">
   <div class="welcome-carousel-slide-0">
-    <h1>Make income whenever, wherever</h1>
+    <div>
+      <h1>Goal</h1>
+      <h3>Go out and learn</h3>
+    </div>
   </div>
   <div class="welcome-carousel-slide-1">
-    <h1>Master your skills by teaching others</h1>
+    <div>
+      <h2>Master your skills by teaching others</h2>
+    </div>
   </div>
   <div class="welcome-carousel-slide-2">
-    <h1>Learn from skilled verified teachers</h1>
+    <div>
+      <h2>Learn from skilled verified teachers</h2>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row team-bio">
+    <h1>The Team</h1>
+    <div class="col-lg-2 col-md-4 col-sm-12">
+      <%= image_tag('team/ollie', class: 'img-circle') %>
+      <h3>Ollie Wolfond</h3>
+      <h5>Co-founder</h5>
+    </div>
+    <div class="col-lg-2 col-md-4 col-sm-12">
+      <%= image_tag('team/ranesh', class: 'img-circle') %>
+      <h3>Ranesh Saha</h3>
+      <h5>Unpaid Engineering Intern</h5>
+    </div>
+    <div class="col-lg-2 col-md-4 col-sm-12">
+      <%= image_tag('team/charlie', class: 'img-circle') %>
+      <h3>Charlie Shi</h3>
+      <h5>Secret Agent</h5>
+    </div>
+    <div class="col-lg-2 col-md-4 col-sm-12">
+      <%= image_tag('team/alex', class: 'img-circle') %>
+      <h3>Alex Chua</h3>
+      <h5>Co-founder</h5>
+    </div>
+    <div class="col-lg-2 col-md-4 col-sm-12">
+      <%= image_tag('team/ali', class: 'img-circle') %>
+      <h3>Ali Parker</h3>
+      <h5>Co-founder</h5>
+    </div>
+    <div class="col-lg-2 col-md-4 col-sm-12">
+      <%= image_tag('team/byron', class: 'img-circle') %>
+      <h3>Byron</h3>
+      <h5>Chief Technical Officer</h5>
+    </div>
   </div>
 </div>
