--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,12 +23,15 @@
     &.welcome-carousel-slide-2 {
       background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.80)), image-url('welcome-2') no-repeat center center;
     }
-    h1 {
+    div {
       width: 100%;
       text-align: center;
       @include vertical-align();
       margin: 0;
       color: white;
+    }
+    h1 {
+      font-weight: 900;
     }
   }
 
@@ -51,4 +54,18 @@
 
 .container-fluid-top {
   margin-top: -20px;
+}
+
+.team-bio {
+  img {
+    width: 100%;
+  }
+  h1 {
+    text-align: center;
+    font-weight: 900;
+    padding-bottom: 10px;
+  }
+  h3,h5 {
+    text-align: center;
+  }
 }
