--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,32 +20,32 @@
   <div class="row team-bio">
     <h1>The Team</h1>
     <div class="col-lg-2 col-md-4 col-sm-12">
-      <%= image_tag('team/ollie', class: 'img-circle') %>
+      <%= image_tag('team/ollie.jpg', class: 'img-circle') %>
       <h3>Ollie Wolfond</h3>
       <h5>Co-founder</h5>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
-      <%= image_tag('team/ranesh', class: 'img-circle') %>
+      <%= image_tag('team/ranesh.jpg', class: 'img-circle') %>
       <h3>Ranesh Saha</h3>
       <h5>Unpaid Engineering Intern</h5>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
-      <%= image_tag('team/charlie', class: 'img-circle') %>
+      <%= image_tag('team/charlie.jpg', class: 'img-circle') %>
       <h3>Charlie Shi</h3>
       <h5>Secret Agent</h5>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
-      <%= image_tag('team/alex', class: 'img-circle') %>
+      <%= image_tag('team/alex.jpg', class: 'img-circle') %>
       <h3>Alex Chua</h3>
       <h5>Co-founder</h5>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
-      <%= image_tag('team/ali', class: 'img-circle') %>
+      <%= image_tag('team/ali.jpg', class: 'img-circle') %>
       <h3>Ali Parker</h3>
       <h5>Co-founder</h5>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
-      <%= image_tag('team/byron', class: 'img-circle') %>
+      <%= image_tag('team/byron.jpg', class: 'img-circle') %>
       <h3>Byron</h3>
       <h5>Chief Technical Officer</h5>
     </div>
