--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,7 +22,7 @@
     <div class="col-lg-2 col-md-4 col-sm-12">
       <%= image_tag('team/ollie.jpg', class: 'img-circle') %>
       <h3>Ollie Wolfond</h3>
-      <h5>Co-founder</h5>
+      <h5>Director of Apparel</h5>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
       <%= image_tag('team/ranesh.jpg', class: 'img-circle') %>
@@ -37,16 +37,16 @@
     <div class="col-lg-2 col-md-4 col-sm-12">
       <%= image_tag('team/alex.jpg', class: 'img-circle') %>
       <h3>Alex Chua</h3>
-      <h5>Co-founder</h5>
+      <h5>Import Piggybacker</h5>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
       <%= image_tag('team/ali.jpg', class: 'img-circle') %>
       <h3>Ali Parker</h3>
-      <h5>Co-founder</h5>
+      <h5>Bathtub Surprise</h5>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
       <%= image_tag('team/byron.jpg', class: 'img-circle') %>
-      <h3>Byron</h3>
+      <h3>Byron Duenas</h3>
       <h5>Chief Technical Officer</h5>
     </div>
   </div>
