--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -57,15 +57,13 @@
 }
 
 .team-bio {
+  text-align: center;
   img {
     width: 100%;
+    max-width: 200px;
   }
   h1 {
-    text-align: center;
     font-weight: 900;
     padding-bottom: 10px;
-  }
-  h3,h5 {
-    text-align: center;
   }
 }
