--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,32 +20,98 @@
   <div class="row team-bio">
     <h1>The Team</h1>
     <div class="col-lg-2 col-md-4 col-sm-12">
-      <%= image_tag('team/ollie.jpg', class: 'img-circle') %>
+      <div class="team-bio-image-wrapper">
+        <%= image_tag('team/ollie.jpg', class: 'img-circle') %>
+        <span class="team-bio-image-description">
+          <span>
+            <span>
+                        You used to call me on my cell phone
+          Late night when you need my love
+          Call me on my cell phone
+            </span>
+          </span>
+        </span>
+      </div>
       <h3>Ollie Wolfond</h3>
       <h5>Director of Apparel</h5>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
+      <div class="team-bio-image-wrapper">
       <%= image_tag('team/ranesh.jpg', class: 'img-circle') %>
+        <span class="team-bio-image-description">
+          <span>
+            <span>
+                        You used to call me on my cell phone
+          Late night when you need my love
+          Call me on my cell phone
+            </span>
+          </span>
+        </span>
+      </div>
       <h3>Ranesh Saha</h3>
       <h5>Unpaid Engineering Intern</h5>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
-      <%= image_tag('team/charlie.jpg', class: 'img-circle') %>
+      <div class="team-bio-image-wrapper">
+        <%= image_tag('team/charlie.jpg', class: 'img-circle') %>
+        <span class="team-bio-image-description">
+          <span>
+            <span>
+                        You used to call me on my cell phone
+          Late night when you need my love
+          Call me on my cell phone
+            </span>
+          </span>
+        </span>
+      </div>
       <h3>Charlie Shi</h3>
       <h5>Secret Agent</h5>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
-      <%= image_tag('team/alex.jpg', class: 'img-circle') %>
+      <div class="team-bio-image-wrapper">
+        <%= image_tag('team/alex.jpg', class: 'img-circle') %>
+        <span class="team-bio-image-description">
+          <span>
+            <span>
+                        You used to call me on my cell phone
+          Late night when you need my love
+          Call me on my cell phone
+            </span>
+          </span>
+        </span>
+      </div>
       <h3>Alex Chua</h3>
       <h5>Import Piggybacker</h5>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
-      <%= image_tag('team/ali.jpg', class: 'img-circle') %>
+      <div class="team-bio-image-wrapper">
+        <%= image_tag('team/ali.jpg', class: 'img-circle') %>
+        <span class="team-bio-image-description">
+          <span>
+            <span>
+                        You used to call me on my cell phone
+          Late night when you need my love
+          Call me on my cell phone
+            </span>
+          </span>
+        </span>
+      </div>
       <h3>Ali Parker</h3>
       <h5>Bathtub Surprise</h5>
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
-      <%= image_tag('team/byron.jpg', class: 'img-circle') %>
+      <div class="team-bio-image-wrapper">
+        <%= image_tag('team/byron.jpg', class: 'img-circle') %>
+        <span class="team-bio-image-description">
+          <span>
+            <span>
+                        You used to call me on my cell phone
+          Late night when you need my love
+          Call me on my cell phone
+            </span>
+          </span>
+        </span>
+      </div>
       <h3>Byron Duenas</h3>
       <h5>Chief Technical Officer</h5>
     </div>
