Added bios and fixed bios on smaller screens

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,9 +25,12 @@
         <span class="team-bio-image-description">
           <span>
             <span>
-                        You used to call me on my cell phone
-          Late night when you need my love
-          Call me on my cell phone
+              <p>
+                “Live as if you were to die tomorrow. Learn as if you were to live forever.”
+              </p>
+              <p>
+                ― Mahatma Gandhi
+              </p>
             </span>
           </span>
         </span>
@@ -41,9 +44,12 @@
         <span class="team-bio-image-description">
           <span>
             <span>
-                        You used to call me on my cell phone
-          Late night when you need my love
-          Call me on my cell phone
+              <p>
+                “Any fool can know. The point is to understand.”
+              </p>
+              <p>
+                ― Albert Einstein
+              </p>
             </span>
           </span>
         </span>
@@ -57,9 +63,12 @@
         <span class="team-bio-image-description">
           <span>
             <span>
-                        You used to call me on my cell phone
-          Late night when you need my love
-          Call me on my cell phone
+              <p>
+                “Share your knowledge. It is a way to achieve immortality.”
+              </p>
+              <p>
+                ― Dalai Lama XIV
+              </p>
             </span>
           </span>
         </span>
@@ -73,9 +82,12 @@
         <span class="team-bio-image-description">
           <span>
             <span>
-                        You used to call me on my cell phone
-          Late night when you need my love
-          Call me on my cell phone
+              <p>
+                “We learn from failure, not from success!”
+              </p>
+              <p>
+                ― Bram Stoker
+              </p>
             </span>
           </span>
         </span>
@@ -89,9 +101,12 @@
         <span class="team-bio-image-description">
           <span>
             <span>
-                        You used to call me on my cell phone
-          Late night when you need my love
-          Call me on my cell phone
+              <p>
+                “Education is the kindling of a flame, not the filling of a vessel.”
+              </p>
+              <p>
+                ― Socrates
+              </p>
             </span>
           </span>
         </span>
@@ -105,9 +120,12 @@
         <span class="team-bio-image-description">
           <span>
             <span>
-                        You used to call me on my cell phone
-          Late night when you need my love
-          Call me on my cell phone
+              <p>
+                “In learning you will teach, and in teaching you will learn.”
+              </p>
+              <p>
+                ― Phil Collins
+              </p>
             </span>
           </span>
         </span>
