--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,9 +68,11 @@
   }
 
   .team-bio-image-wrapper {
+    max-width: 200px;
     width: 100%;
     height: 100%;
     position: relative;
+    margin: auto;
     .team-bio-image-description {
       position: absolute;
       border-radius: 50%;
