--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -61,13 +61,28 @@ label.image-select {
     visibility: hidden; /* Makes input not-clickable */
     position: absolute; /* Remove input from document flow */
   }
-  input + img {
+  input + div {
     cursor:pointer;
-    border:2px solid transparent;
+    border:1px solid black;
     height: 100px;
+    width: 100px;
+    text-align: center;
+    display: table;
+    div {
+      display: table-cell;
+      vertical-align: middle;
+      img {
+        height: 32px;
+        width: 32px;
+      }
+      p {
+        margin-bottom: 0px;
+      }
+    }
   }
-  input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
-    border:2px solid #f00;
+  
+  input:checked + div { /* (RADIO CHECKED) IMAGE STYLES */
+    border:1px solid #f00;
   }
 }
 
