--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,8 @@
 <h2>Sign up</h2>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+    <%= f.input :first_name %>
+    <%= f.input :last_name %>
     <%= f.input :email, autofocus: true %>
     <%= f.input :password, autocomplete: 'off', hint: @minimum_password_length ? "#{@minimum_password_length} characters minimum" : nil %>
     <%= f.input :password_confirmation, autocomplete: 'off' %>
