--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -1,5 +1,6 @@
-<ul>
+<h1>Explore</h1>
+<table class="table table-bordered">
   <% @skills.each do |skill| %>
       <%= render 'shared/skill', skill: skill %>
   <% end %>
-</ul>
+</table>
