--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,9 @@
  *= require_self
  *= require_tree .
  */
+
+@import "bootstrap-overrides-variables";
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import 'bootstrap-datetimepicker';
+@import "custom";
