--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,7 @@
 <div class="row">
-  <div class="col-lg-12 col-md-12">
-    <%= simple_form_for([@user, hour]) do |f| %>
-        <% @hours.each do |hour| %>
-            <%= render 'hour', hour: hour %>
-        <% end %>
+  <div class="col-lg-12 col-md-12 hours">
+    <% @hours.each do |hour| %>
+        <%= render 'shared/hour', hour: hour %>
     <% end %>
   </div>
 </div>
