--- a/app/assets/javascripts/users/edit.js.erb
+++ b/app/assets/javascripts/users/edit.js.erb
@@ -19,10 +19,9 @@ function ready() {
     });
 
     var bindingFunction = function(event, data, status, xhr) {
-        $('.new_hour').addClass('edit_hour');
-        $('.new_hour').removeClass('new_hour').attr("id","edit_hour_" + data.id);
-        console.log(data)
-        $(data.partial).appendTo(".hours");
+        $('.new_hour').remove();
+        $(data.edit_partial).appendTo(".hours");
+        $(data.new_partial).appendTo(".hours");
         $('.form_time').datetimepicker({
             format: 'LT',
             stepping: 30
