re render page when editing hours

--- a/app/views/users/hours/destroy.js.erb
+++ b/app/views/users/hours/destroy.js.erb
@@ -1,1 +1,3 @@
-$('#edit_hour_' + "<%= @hour.id %>").remove();
+$('.profile').remove();
+$("<%= escape_javascript(render 'users/profile', user: @user) %>").appendTo(".user");
+show();
