--- a/app/views/shared/_hour_form.html.erb
+++ b/app/views/shared/_hour_form.html.erb
@@ -4,10 +4,10 @@
         <%= f.input :day, collection: [['Sunday',0],['Monday',1],['Tuesday',2],['Wednesday',3],['Thursday',4],['Friday',5],['Saturday',6]], label_method: :first, value_method: :last, prompt: 'Day of the week', input_html: { 'hour-id': hour.id }, label: false %>
       </div>
       <div class="col-lg-3">
-        <%= f.input :open_time, as: :time_picker, label: false, 'hour-id': hour.id %>
+        <%= f.input :open_time, as: :time_picker, label: false, input_html: { 'hour-id': hour.id } %>
       </div>
       <div class="col-lg-3">
-        <%= f.input :close_time, as: :time_picker, label: false, 'hour-id': hour.id %>
+        <%= f.input :close_time, as: :time_picker, label: false, input_html: { 'hour-id': hour.id } %>
       </div>
       <div class="col-lg-2">
         <% if hour.persisted? %>
