--- a/app/views/skills/requests/new.html.erb
+++ b/app/views/skills/requests/new.html.erb
@@ -4,3 +4,4 @@
     <%= f.input :end_time, as: :date_time_picker %>
     <%= f.button :submit, 'Request' %>
 <% end %>
+<%= render 'shared/availability.html.erb', user: @skill.user %>
