--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,32 +1,37 @@
-<div class="row profile">
-  <div class="row">
-    <div class="col-lg-6">
-      <img src="<%= user.image %>" class="img-circle">
-      <h1><%= user.name %></h1>
+  <div class="row profile">
+    <div class="row">
+      <div class="col-lg-6">
+        <img src="<%= user.image %>" class="img-circle">
+        <h1><%= user.name %></h1>
+      </div>
+      <div class="col-lg-6">
+        <div id="map"></div>
+        <% if user.location %>
+            <%= hidden_field :user, :latitude, value: user.location.latitude %>
+            <%= hidden_field :user, :longitude, value: user.location.longitude %>
+        <% end %>
+      </div>
     </div>
-    <div class="col-lg-6">
-      <div id="map"></div>
-      <% if user.location %>
-          <%= hidden_field :user, :latitude, value: user.location.latitude %>
-          <%= hidden_field :user, :longitude, value: user.location.longitude %>
+    <table class="table table-striped">
+      <tbody>
+      <% user.skills.each do |skill|%>
+          <tr>
+            <td>
+              <%= render 'users/skill.html.erb', skill: skill %>
+            </td>
+          </tr>
+      <% end %>
+      <tr>
+        <td>
+          <%= render 'users/new_skill.html.erb' %>
+        </td>
+      </tr>
+      </tbody>
+    </table>
+    <%= render 'shared/availability.html.erb', user: user %>
+    <div class="col-lg-12 col-md-12 hours">
+      <% (user.hours + [Hour.new]).each do |hour| %>
+          <%= render 'shared/hour_form.html.erb', hour: hour %>
       <% end %>
     </div>
   </div>
-  <table class="table table-striped">
-    <tbody>
-    <% user.skills.each do |skill|%>
-        <tr>
-          <td>
-            <%= render 'users/skill.html.erb', skill: skill %>
-          </td>
-        </tr>
-    <% end %>
-    </tbody>
-  </table>
-  <%= render 'shared/availability.html.erb', user: user %>
-  <div class="col-lg-12 col-md-12 hours">
-    <% (user.hours + [Hour.new]).each do |hour| %>
-        <%= render 'shared/hour_form.html.erb', hour: hour %>
-    <% end %>
-  </div>
-</div>
