--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,1 +1,1 @@
-<%= render 'layouts/application', partial: 'layouts/main_application' %>
+<%= render 'layouts/application', partial: 'layouts/container' %>
