--- a/app/views/layouts/_application.html.erb
+++ b/app/views/layouts/_application.html.erb
@@ -48,17 +48,19 @@
       <span class="icon-bar"></span>
     </button>
     <%= link_to 'Goal', root_path, class: 'navbar-brand' %>
-    <ul class="nav navbar-nav">
-      <li class="<%= 'active' if current_page?(skills_path) %>">
-        <%= link_to 'Explore', skills_path %>
-      </li>
-      <li class="<%= 'active' if current_page?(requests_path) %>">
-        <%= link_to 'Requests', requests_path %>
-      </li>
-      <li class="<%= 'active' if current_page?(user_path(current_user)) %>">
-        <%= link_to 'My Profile', user_path(current_user) %>
-      </li>
-    </ul>
+    <div class="navbar-collapse collapse navbar-responsive-collapse">
+      <ul class="nav navbar-nav">
+        <li class="<%= 'active' if current_page?(skills_path) %>">
+          <%= link_to 'Explore', skills_path %>
+        </li>
+        <li class="<%= 'active' if current_page?(requests_path) %>">
+          <%= link_to 'Requests', requests_path %>
+        </li>
+        <li class="<%= 'active' if current_page?(user_path(current_user)) %>">
+          <%= link_to 'My Profile', user_path(current_user) %>
+        </li>
+      </ul>
+    </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <% if user_signed_in? %>
           <%= link_to('Logout', destroy_user_session_path, method: :delete, class: 'btn btn-default navbar-btn navbar-right') %>
