all js in one file

--- a/app/views/layouts/_application.html.erb
+++ b/app/views/layouts/_application.html.erb
@@ -34,7 +34,7 @@
   <!-- Size should be 32 x 32 pixels -->
   <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
-  <%= javascript_include_tag 'application', "#{params[:controller]}/#{params[:action]}" %>
+  <%= javascript_include_tag 'application' %>
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAPnYZT13KrBCj5JeWfsQfx5cubl0wpBE&libraries=places"></script>
 
 </head>
