--- a/app/assets/stylesheets/bootstrap-overrides-variables.scss
+++ b/app/assets/stylesheets/bootstrap-overrides-variables.scss
@@ -1,3 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,300,900);
 
 $font-family-sans-serif: 'Lato';
+$slick-arrow-color: #555555;
+$slick-prev-character: "<";
+$slick-next-character: ">";
