--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -238,3 +238,46 @@ img.skill-user-image {
   width: 100%;
   height: 400px;
 }
+
+.skill-types-carousel {
+  div {
+    .skill-type-wrapper {
+      float: left;
+      position: relative;
+      height: 100% !important;
+      img {
+        height: 100%;
+        width: 100%;
+      }
+      img + div {
+        text-align: center;
+        position: absolute;
+        bottom: 0px;
+        width: 100%;
+        font-size: $font-size-h3;
+        color: white;
+        background-color: rgba(0, 0, 0, 0.50);
+        padding: 10px;
+      }
+    }
+
+  }
+}
+
+.profile-image {
+  border-radius: 50%;
+  float: left;
+  border:1px solid #DADADA;
+  margin-right: 20px;
+}
+
+.edit_user {
+  display: inline-block;
+}
+
+.slick-prev {
+  color: red;
+}
+.slick-next {
+  color: red;
+}
