--- a/app/views/shared/_availability.html.erb
+++ b/app/views/shared/_availability.html.erb
@@ -1,22 +1,22 @@
-<table class="table table-bordered">
-  <tr>
-    <% Hour.days.each do |day| %>
-        <th>
-          <%= day %>
-        </th>
-    <% end %>
-  </tr>
-  <tr>
-    <% (0..6).to_a.each do |day| %>
-        <td class="col-lg-1">
-          <ul>
-            <% user.hours.where(day: day).each do |hour| %>
-                <li>
-                  <%= hour.open_time %> - <%= hour.close_time %>
-                </li>
-            <% end %>
-          </ul>
-        </td>
-    <% end %>
-  </tr>
+
+<table class="table table-striped">
+  <% Hour.days.each_with_index do |day, index| %>
+      <% hours = user.hours.where(day: index) %>
+      <% if hours.length > 0 %>
+          <tr>
+            <td>
+              <%= day %>
+            </td>
+            <td>
+              <ul>
+                <% hours.where(day: index).each do |hour| %>
+                    <li>
+                      <%= hour.open_time %> - <%= hour.close_time %>
+                    </li>
+                <% end %>
+              </ul>
+            </td>
+          </tr>
+      <% end %>
+  <% end %>
 </table>
