--- a/app/views/skills/new.html.erb
+++ b/app/views/skills/new.html.erb
@@ -1,3 +1,15 @@
+<div class="skill-types-carousel">
+  <% @skill_types.each do |skill_type| %>
+      <div>
+        <a href="#" class="skill-types-select" skill-type-id="<%= skill_type.id %>" skill-type-name="<%= skill_type.name %>">
+          <div class="skill-type-wrapper">
+            <%= image_tag "skill_types/#{skill_type.name}.jpg" %>
+            <div><%= skill_type.name %></div>
+          </div>
+        </a>
+      </div>
+  <% end %>
+</div>
 <%= simple_form_for(@skill) do |f| %>
     <%= f.input :skill_type_name, input_html: { placeholder: 'What is your skill?' }, label: false %>
     <%= f.input :skill_type, as: :hidden %>
