--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,15 +1,11 @@
   <div class="row profile">
     <div class="row">
       <div class="col-lg-6">
-        <img src="<%= user.image %>" class="img-circle">
-        <h1><%= user.name %></h1>
+        <img src="<%= user.image %>" class="profile-image">
+        <h2><%= user.name %></h2>
       </div>
       <div class="col-lg-6">
-        <div id="map"></div>
-        <% if user.location %>
-            <%= hidden_field :user, :latitude, value: user.location.latitude %>
-            <%= hidden_field :user, :longitude, value: user.location.longitude %>
-        <% end %>
+
       </div>
     </div>
     <table class="table table-striped">
@@ -28,7 +24,20 @@
       </tr>
       </tbody>
     </table>
-    <%= render 'shared/availability.html.erb', user: user %>
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <div id="map"></div>
+        <% if user.location %>
+            <%= hidden_field :user, :latitude, value: user.location.latitude %>
+            <%= hidden_field :user, :longitude, value: user.location.longitude %>
+        <% end %>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <h3>Availability</h3>
+        <%= render 'shared/availability.html.erb', user: user %>
+      </div>
+    </div>
+
     <div class="col-lg-12 col-md-12 hours">
       <% (user.hours + [Hour.new]).each do |hour| %>
           <%= render 'shared/hour_form.html.erb', hour: hour %>
