done main functionality

--- a/app/assets/stylesheets/bootstrap-overrides-variables.scss
+++ b/app/assets/stylesheets/bootstrap-overrides-variables.scss
@@ -2,5 +2,4 @@
 
 $font-family-sans-serif: 'Lato';
 $slick-arrow-color: #555555;
-$slick-prev-character: "<";
-$slick-next-character: ">";
+$slick-font-path: './fonts/'
