--- a/app/views/shared/_availability.html.erb
+++ b/app/views/shared/_availability.html.erb
@@ -1,5 +1,5 @@
 
-<table class="table table-striped">
+<table class="table">
   <% Hour.days.each_with_index do |day, index| %>
       <% hours = user.hours.where(day: index) %>
       <% if hours.length > 0 %>
