--- a/app/views/users/_new_skill.html.erb
+++ b/app/views/users/_new_skill.html.erb
@@ -1,3 +1,3 @@
-<div class="table-vertical-center text-center">
-  <%= link_to 'Add A New Skill', new_skill_path, class: 'h1' %>
+<div>
+  <%= link_to 'Add A New Skill', new_skill_path, class: 'btn btn-lg btn-success' %>
 </div>
