--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,14 +1,18 @@
-  <div class="row profile">
+<div class="row profile">
+  <div class="col-lg-12">
     <div class="row">
       <div class="col-lg-6">
-        <img src="<%= user.image %>" class="profile-image">
-        <h2><%= user.name %></h2>
-      </div>
-      <div class="col-lg-6">
+        <%= render 'users/details.html.erb', user: user %>
 
       </div>
+      <div class="col-lg-6">
+        <%= render 'shared/availability.html.erb', user: user %>
+      </div>
     </div>
+  </div>
+  <div class="col-lg-12">
     <table class="table table-striped">
+      <h3>Skills</h3>
       <tbody>
       <% user.skills.each do |skill|%>
           <tr>
@@ -17,30 +21,26 @@
             </td>
           </tr>
       <% end %>
-      <tr>
-        <td>
-          <%= render 'users/new_skill.html.erb' %>
-        </td>
-      </tr>
+      <% if user == current_user %>
+          <tr>
+            <td>
+              <%= render 'users/new_skill.html.erb' %>
+            </td>
+          </tr>
+      <% end %>
       </tbody>
     </table>
-    <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-12">
-        <div id="map"></div>
-        <% if user.location %>
-            <%= hidden_field :user, :latitude, value: user.location.latitude %>
-            <%= hidden_field :user, :longitude, value: user.location.longitude %>
+  </div>
+  <% if user == current_user %>
+      <div class="col-lg-12 col-md-12 hours">
+        <h3>Your Availability</h3>
+        <% (user.hours + [Hour.new]).each do |hour| %>
+            <%= render 'shared/hour_form.html.erb', hour: hour %>
         <% end %>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-12">
-        <h3>Availability</h3>
-        <%= render 'shared/availability.html.erb', user: user %>
+      <div class="col-lg-12">
+        <h3>Your Location</h3>
+        <%= render 'users/location_form.html.erb', location: user.location ? user.location : Location.new %>
       </div>
-    </div>
-
-    <div class="col-lg-12 col-md-12 hours">
-      <% (user.hours + [Hour.new]).each do |hour| %>
-          <%= render 'shared/hour_form.html.erb', hour: hour %>
-      <% end %>
-    </div>
-  </div>
+  <% end %>
+</div>
