--- a/app/views/requests/_skill_request.html.erb
+++ b/app/views/requests/_skill_request.html.erb
@@ -9,8 +9,8 @@
     </div>
     <div class="col-lg-6">
       <% if request.pending? %>
-          <%= link_to 'Accept', request_accept_path(request), method: :patch, remote: true, class: 'btn btn-lg btn-success pull-right' %>
-          <%= link_to 'Decline', request_decline_path(request), method: :delete, remote: true, class: 'btn btn-lg btn-danger pull-right' %>
+          <%= link_to 'Accept', request_accept_path(request), method: :patch, remote: true, class: 'btn btn-success pull-right' %>
+          <%= link_to 'Decline', request_decline_path(request), method: :delete, remote: true, class: 'btn btn-danger pull-right' %>
       <% else %>
           <p class="pull-right h3">You have <%= request.status %> this session.</p>
       <% end %>
