--- a/app/views/shared/_skill.html.erb
+++ b/app/views/shared/_skill.html.erb
@@ -10,7 +10,7 @@
           <p>$<%= skill.rate %> per hour</p>
         </div>
         <div class="col-lg-6">
-          <%= link_to 'Request Session', new_skill_request_path(skill_id: skill.id), class: 'btn btn-lg btn-success pull-right' %>
+          <%= link_to 'Request Session', new_skill_request_path(skill_id: skill.id), class: 'btn btn-success pull-right' %>
         </div>
       </div>
     </div>
