--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -9,7 +9,7 @@
       <p>Status: <%= request.status %></p>
     </div>
     <div class="col-lg-6">
-      <%= link_to 'Cancel', request_cancel_path(request), method: :delete, remote: true, class: 'btn btn-danger btn-lg pull-right' %>
+      <%= link_to 'Cancel', request_cancel_path(request), method: :delete, remote: true, class: 'btn btn-danger pull-right' %>
     </div>
   </div>
 </div>
