more styling fixes

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -261,6 +261,7 @@ img.skill-user-image {
 }
 
 .profile-image {
+  max-width: 100%;
   border-radius: 50%;
   float: left;
   border:1px solid #DADADA;
