--- a/app/views/users/_skill.html.erb
+++ b/app/views/users/_skill.html.erb
@@ -2,6 +2,6 @@
   <div class="col-lg-12">
     <h3><%= skill.skill_type.name.titleize %></h3>
     <p class="h4"><%= skill.level_name %></p>
-    <p class="h4">$<%= skill.rate %> per hour</p>
+    <p class="h4">$<%= skill.rate %>/hour</p>
   </div>
 </div>
