only facebook login and sign up

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -272,6 +272,10 @@ img.skill-user-image {
   display: inline-block;
 }
 
+.vertical-align {
+  @include vertical-align();
+}
+
 .slick-prev {
   color: red;
 }
