--- a/app/views/users/_skill.html.erb
+++ b/app/views/users/_skill.html.erb
@@ -1,7 +1,14 @@
 <div class="row table-vertical-center">
-  <div class="col-lg-12">
+  <div class="col-lg-6">
     <h3><%= skill.skill_type.name.titleize %></h3>
     <p class="h4"><%= skill.level_name %></p>
     <p class="h4">$<%= skill.rate %>/hour</p>
+  </div>
+  <div class="col-lg-6">
+    <% if skill.user == current_user %>
+        <%= link_to 'Edit Skill', edit_skill_path(skill.id), class: 'btn btn-success pull-right' %>
+    <% else %>
+        <%= link_to 'Request Session', new_skill_request_path(skill_id: skill.id), class: 'btn btn-success pull-right' %>
+    <% end %>
   </div>
 </div>
