Changed name from Goal to Pash

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="welcome-carousel">
   <div class="welcome-carousel-slide-0">
     <div>
-      <h1>Goal</h1>
+      <h1>Pash</h1>
       <h3>Go out and learn</h3>
     </div>
   </div>
