--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,17 +1,20 @@
 <div class="welcome-carousel">
   <div class="welcome-carousel-slide-0">
-    <div>
+    <div class="content">
       <h1>Pash</h1>
       <h3>Go out and learn</h3>
+      <%= simple_form_for User.new, remote: true, html: { 'data-type': :json } do |f| %>
+          <%= f.input :email, as: :landing_email, label: false, input_html: { placeholder: 'Type your email...'} %>
+      <% end %>
     </div>
   </div>
   <div class="welcome-carousel-slide-1">
-    <div>
+    <div class="content">
       <h2>Master your skills by teaching others</h2>
     </div>
   </div>
   <div class="welcome-carousel-slide-2">
-    <div>
+    <div class="content">
       <h2>Learn from skilled verified teachers</h2>
     </div>
   </div>
@@ -40,7 +43,7 @@
     </div>
     <div class="col-lg-2 col-md-4 col-sm-12">
       <div class="team-bio-image-wrapper">
-      <%= image_tag('team/ranesh.jpg', class: 'img-circle') %>
+        <%= image_tag('team/ranesh.jpg', class: 'img-circle') %>
         <span class="team-bio-image-description">
           <span>
             <span>
